add icons to sections

--- a/index.html
+++ b/index.html
@@ -720,7 +720,8 @@
 
   <!-- Partners -->
   <section id="partners" class="wrap">
-    <h2 class="section-title">Project Partners</h2>
+<h2 class="section-title">🌐 Project Partners</h2>
+
 
     <div class="partner-grid" aria-label="Partner logos">
       <div class="partner" style="--glow:#00A6D6;">
@@ -749,7 +750,8 @@
 
   <!-- Team -->
   <section id="team" class="wrap">
-    <h2 class="section-title">Team</h2>
+    <h2 class="section-title">👥 Team</h2>
+
     <div class="team-grid">
       <div class="member">
         <img class="avatar" src="https://placehold.co/112x112" alt="Member name" />
@@ -784,7 +786,7 @@
 
   <!-- publications -->
   <section id="publications" class="wrap">
-    <h2 class="section-title">Publications</h2>
+  <h2 class="section-title">🎓 Publications</h2>
 
         <div id="publications-container"></div>
 
@@ -818,7 +820,13 @@
 
   <!-- Acknowledgements -->
   <section id="ack" class="wrap">
-    <h2 class="section-title">Acknowledgements</h2>
+  <h2 class="section-title">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+        viewBox="0 0 24 24" fill="currentColor" style="vertical-align:middle;">
+      <path d="M6 2h9l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm7 1.5V8h4.5L13 3.5zm-1 9.5l-3 3-1.5-1.5L7 16l2 2 4.5-4.5L12 13z"/>
+    </svg>
+    Acknowledgements
+  </h2>
     <p style="color:var(--muted); max-width: 75ch">
       This work was supported in part by the Dutch Research Council’s RESCUE Project NWO ESI.2019.006
     </p>
