--- a/index.html
+++ b/index.html
@@ -596,6 +596,72 @@
         font-weight: 500;
       }
 
+      .mission {
+        position: relative;
+        padding: 22px 22px 20px;
+        border-left: 3px solid var(--brand);
+        background:
+          radial-gradient(circle at 0 0, rgba(43,176,237,0.10), transparent 55%),
+          radial-gradient(circle at 100% 120%, rgba(167,139,250,0.10), transparent 60%),
+          var(--card);
+      }
+
+      .mission-title {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 14px;
+        letter-spacing: 0.03em;
+      }
+
+      .mission-layout {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+      }
+
+      .mission-block {
+        display: flex;
+        gap: 14px;
+        align-items: flex-start;
+      }
+
+      .mission-icon {
+        flex-shrink: 0;
+        width: 34px;
+        height: 34px;
+        border-radius: 999px;
+        display: grid;
+        place-items: center;
+        background: radial-gradient(circle at 30% 0%, rgba(43,176,237,0.35), transparent 55%);
+        border: 1px solid rgba(148,163,184,0.55);
+        color: var(--brand-strong);
+      }
+
+      .mission-body p {
+        margin: 0 0 4px;
+        font-weight: 500;
+        color: var(--text);
+      }
+
+      .mission-list {
+        margin: 0;
+        padding-left: 1.2rem;
+        color: var(--muted);
+        line-height: 1.5;
+      }
+
+      /* On larger screens, arrange blocks in columns */
+      @media (min-width: 860px) {
+        .mission-layout {
+          flex-direction: row;
+        }
+        .mission-block {
+          flex: 1;
+        }
+      }
+
+
 
 
 
@@ -653,30 +719,71 @@
 
   <!-- About / Intro -->
   <section id="about" class="wrap">
-    <div class="card">
-      <h2 class="section-title" style="margin-bottom:16px;">Mission</h2>
+    <div class="card mission">
+      <h2 class="section-title mission-title">Mission</h2>
 
-      <p>RESCUE develops advanced mathematical and computational foundations, methods, and technologies for</p>
-      <ul style="padding-left: 1.2rem; color: var(--muted);">
-        <li>Incident response to protect utilities from (state-sponsored) cyber attacks</li>
-        <li>Cyber secure the Control Room of the Future (CRoF)</li>
-      </ul>
+      <div class="mission-layout">
+        <!-- Block 1 -->
+        <div class="mission-block">
+          <div class="mission-icon" aria-hidden="true">
+            <!-- shield / cyber protection -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24">
+              <path d="M12 2l7 3v6.5c0 4.2-2.7 8-7 9.5-4.3-1.5-7-5.3-7-9.5V5l7-3z" fill="none" stroke="currentColor" stroke-width="1.6" />
+              <path d="M9.5 11.5l1.9 1.9 3.8-3.8" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+          <div class="mission-body">
+            <p>RESCUE develops advanced mathematical and computational foundations, methods, and technologies for</p>
+            <ul class="mission-list">
+              <li>Incident response to protect utilities from (state-sponsored) cyber attacks</li>
+              <li>Cyber secure the Control Room of the Future (CRoF)</li>
+            </ul>
+          </div>
+        </div>
 
-      <p>Improve operational resilience of integrated Cyber-Physical energy Systems (CPS) by combining</p>
-      <ul style="padding-left: 1.2rem; color: var(--muted);">
-        <li>Innovative technologies</li>
-        <li>Incident response strategies</li>
-        <li>Human factors</li>
-      </ul>
+        <!-- Block 2 -->
+        <div class="mission-block">
+          <div class="mission-icon" aria-hidden="true">
+            <!-- systems / CPS resilience -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24">
+              <circle cx="7" cy="7" r="2.2" stroke="currentColor" stroke-width="1.6" fill="none" />
+              <circle cx="17" cy="7" r="2.2" stroke="currentColor" stroke-width="1.6" fill="none" />
+              <circle cx="12" cy="17" r="2.2" stroke="currentColor" stroke-width="1.6" fill="none" />
+              <path d="M8.8 8.4L10.8 15M15.2 8.4L13.2 15" stroke="currentColor" stroke-width="1.3" />
+            </svg>
+          </div>
+          <div class="mission-body">
+            <p>Improve operational resilience of integrated Cyber-Physical energy Systems (CPS) by combining</p>
+            <ul class="mission-list">
+              <li>Innovative technologies</li>
+              <li>Incident response strategies</li>
+              <li>Human factors</li>
+            </ul>
+          </div>
+        </div>
 
-      <p>Develop human capital for power system operators</p>
-      <ul style="padding-left: 1.2rem; color: var(--muted);">
-        <li>Training facility: digital twin, CRoF &amp; cyber range</li>
-        <li>Conduct attack / defense exercises</li>
-        <li>Train system operators &amp; cyber security professionals for incident response</li>
-      </ul>
+        <!-- Block 3 -->
+        <div class="mission-block">
+          <div class="mission-icon" aria-hidden="true">
+            <!-- human capital / operators -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24">
+              <path d="M9 11a3 3 0 1 1 6 0 3 3 0 0 1-6 0z" fill="none" stroke="currentColor" stroke-width="1.6" />
+              <path d="M6 19c0-2.2 2.7-4 6-4s6 1.8 6 4" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" />
+            </svg>
+          </div>
+          <div class="mission-body">
+            <p>Develop human capital for power system operators</p>
+            <ul class="mission-list">
+              <li>Training facility: digital twin, CRoF &amp; cyber range</li>
+              <li>Conduct attack / defense exercises</li>
+              <li>Train system operators &amp; cyber security professionals for incident response</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
 
   <!-- Feature sections -->
   <section id="sections" class="feature">
