add publications sections and refine team

--- a/index.html
+++ b/index.html
@@ -1005,16 +1005,16 @@
             <img class="avatar" src="img/team/_MG_7512-Ioannis Semertzis.jpg" alt="Ioannis Semertzis" />
             <div class="member-main">
               <strong class="member-name">Ioannis Semertzis</strong>
-              <div class="member-role">Role / Institution</div>
+              <div class="member-role">TU Delft</div>
               <div class="member-links">
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.linkedin.com/in/ioannis-semertzis/" target="_blank" rel="noopener noreferrer"
                   class="icon-link" aria-label="LinkedIn profile">
                   <!-- LinkedIn icon -->
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M4.98 3.5C4.98 4.88 3.9 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.32 8.16h4.36V24H.32zM8.2 8.16h4.18v2.16h.06c.58-1.1 2-2.26 4.12-2.26 4.4 0 5.21 2.9 5.21 6.68V24h-4.36v-7.6c0-1.82-.03-4.16-2.54-4.16-2.54 0-2.93 1.98-2.93 4.02V24H8.2z" />
                   </svg>
                 </a>
-                <a href="mailto:ioannis@example.com" class="icon-link" aria-label="Email">
+                <a href="mailto:I.Semertzis@tudelft.nl" class="icon-link" aria-label="Email">
                   <!-- Email icon -->
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm0 2v.2l8 5 8-5V6H4zm16 2.9-7.6 4.75a2 2 0 0 1-2.1 0L4 8.9V18h16V8.9z" />
@@ -1026,8 +1026,8 @@
         </div>
         <div class="member-extra">
           <p>
-            Short bio or responsibilities here. Focus on RESCUE-related role, e.g.
-            incident response, CRoF, or CPS resilience.
+            In RESCUE, Ioannis Semertzis develops next-generation intrusion detection and prevention methods for the Control Room of the Future using deep-learning-based anomaly detection in cyber-physical energy systems. His areas of interest are cyber-physical energy systems, digital twins, and cybersecurity.
+
           </p>
         </div>
       </article>
@@ -1038,16 +1038,16 @@
           <div class="member-top">
             <img class="avatar" src="img/team/sho_phtoto_CWI.JPG" alt="Member name" />
             <div class="member-main">
-              <strong class="member-name">Member Name</strong>
-              <div class="member-role">Role / Institution</div>
+              <strong class="member-name">Sho Cremers</strong>
+              <div class="member-role">CWI</div>
               <div class="member-links">
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.linkedin.com/in/sho-cremers/" target="_blank" rel="noopener noreferrer"
                   class="icon-link" aria-label="LinkedIn profile">
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M4.98 3.5C4.98 4.88 3.9 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.32 8.16h4.36V24H.32zM8.2 8.16h4.18v2.16h.06c.58-1.1 2-2.26 4.12-2.26 4.4 0 5.21 2.9 5.21 6.68V24h-4.36v-7.6c0-1.82-.03-4.16-2.54-4.16-2.54 0-2.93 1.98-2.93 4.02V24H8.2z" />
                   </svg>
                 </a>
-                <a href="mailto:someone@example.com" class="icon-link" aria-label="Email">
+                <a href="mailto:Sho.Cremers@cwi.nl" class="icon-link" aria-label="Email">
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm0 2v.2l8 5 8-5V6H4zm16 2.9-7.6 4.75a2 2 0 0 1-2.1 0L4 8.9V18h16V8.9z" />
                   </svg>
